# investor-dreams

./: .env.example  .gitignore  README.md  THEME_CHANGES.md  THEME_COMPLETE.md  THEME_GUIDE.md  index.html  jsconfig.json  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
public/json/: index_data.json
src/: main.jsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  notifications.json
src-tauri/data/: tickers_names_exchanges.csv
src-tauri/icons/: icon.icns
src-tauri/src/: algorithms.rs  file_reading.rs  lib.rs  main.rs  ollama.rs  requesting.rs  sensitive_constants.rs  sensitive_data.rs  tools.rs  yahoo_finance.rs
src/app/: app.jsx  layout.js  layout.jsx  not-found.js  not-found.jsx  page.js
src/app/config/: settings.js
src/app/css/: Analysis.css  Formatting.css  Homepage.css  Playground.css  Portfolio.css  Widgets.css  globals.css  notfound.css  tradingview.css
src/app/funcs/: algorithms.js  analysis.js  cache.js  favourites.js  formatting.js  historical_pricing.js  logger.js  polygon.js  reddit.js  scraper.js  sectors.js  states.js  stock_api.js  structures.ts  themes.jsx  tools.js
src/app/funcs/webscrapper/: browser.js
src/app/home/: page.js
src/app/main/: page.js
src/app/mui/: Background.jsx  other.jsx  theme.js
src/app/mui/sign-in-side/: ApiCard.jsx  ApiCard.tsx  ApiSide.jsx  ApiSide.tsx  Content.jsx
src/app/networking/: basic.js  cache.js  polygon.js  scraper.js  stock_api.js
src/app/pages/: About.js  Analysis.jsx  Home.jsx  NotFound.jsx  Opportunities.jsx  Playground.jsx  Portfolio.jsx  Setup.jsx  TradingView.jsx  index.js
src/app/playground/: page.js
src/app/predictions/: page.js
src/app/settings/: SettingsContext.jsx  WidgetSettingsPanel.jsx  settings.js
src/app/theme/: standardTheme.js  themeUtils.js
src/app/tickers/: page.js
src/app/ui_components/: BigStockWidget.js  MenuButton.js  Playground.js  PriceGraph.js  SmallStockWidget.js  StockWidget.js  accountMenu.js  accountMenu.jsx  sectorSelect.js
src/app/ui_components/containers/: Playground.js
src/app/ui_components/misc/: EasySelection.js  MarketCapSlider.jsx  SectorSelect.js  SectorSelect.jsx
src/app/ui_components/pages/: Analysis.jsx  Home.js  Home.jsx  NotFound.jsx  Playground.js  Playground.jsx  Predictions.js  Predictions.jsx  TickerPage.js  TickerPage.jsx
src/app/ui_components/popups/: CustomSector.js  CustomSector.jsx  PredictionPopup.js  TableDownloadPopup.jsx
src/app/ui_components/widgets/: BigStockWidget.js  SmallStockWidget.js
src/components/: ButtonPercentageFormat.js  ButtonPercentageFormat.jsx  LineChartWithCustomTooltip.jsx  MenuButton.jsx  PercentageFormat.js  PercentageFormat.jsx  PriceGraph.js  PriceGraph.jsx  StockGraph.jsx  TradingViewWidget.jsx
src/components/Graphing/: CombinedGraph.jsx  IndicatorGraph.jsx  MACDChart.jsx  PriceGraph.jsx  StockGraph.jsx
src/components/containers/: Favourites.js
src/components/misc/: EasySelection.jsx  MarketCapSlider.jsx  SectorSelect.jsx
src/components/popups/: CustomSectorNamePopup.jsx  DefaultPopup.jsx  GeneralPopup.js  HeatMapPopup.jsx  Popup.jsx  SectorAddMenu.js  TableDownloadPopup.jsx  TradingViewPopup.jsx
src/components/searching/: SeachBoxes.js  SearchBarTop.js  SearchBarTop.jsx
src/components/tradingview/: AdvancedChart.jsx  CompanyProfile.jsx  FundamentalData.jsx  HotLists.jsx  SymbolInfo.jsx  TechnicalAnalysis.jsx  TickerTape.jsx  TopStories.jsx  TradingViewPopup.jsx
src/components/widgets/: BigStockWidget.js  BigStockWidget.jsx  DynamicStockWidget.js  DynamicStockWidget.jsx  HeatMap.jsx  ImplementedDynamicStockWidget.js  ImplementedWidget.js  MediumStockWidget.js  MediumStockWidget.jsx  MiniStockWidget.js  MiniStockWidget.jsx  NewsWidget.jsx  PopupWidget.js  PopupWidget.jsx  SmallStockWidget.js  SmallStockWidget.jsx  StockWidget.js  StockWidget.jsx  TradingViewWidget.jsx
src/tests/: Algorithms.test.jsx  Home.test.jsx  formatting.test.jsx  tools.test.jsx
the-bin/: csv_data.rs  file_reading.rs  readme.MD  requesting.rs
