[package]
name = "investor-dreams"
version = "0.0.1"
description = "Investor platform"
authors = ["Luca Lapenna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
incremental = true # Compile your binary in smaller steps.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = false # Ensures debug symbols are removed.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[lib]
name = "investor_dreams_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-decorum = "1.0.0"
window-vibrancy = "0.5.2"
whoami = "1.5.1"
dotenv = "0.15.0"
ollama-rs = "0.2.0"
once_cell = "1.19.0"
directories = "5.0"
base64 = "0.22.1"
