[package]
name = "investor-dreams"
version = "0.0.1"
description = "Investor platform"
authors = ["Luca Lapenna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Development profile - optimized for fast compilation
[profile.dev]
incremental = true         # Enable incremental compilation for faster rebuilds
codegen-units = 256       # More codegen units = faster parallel compilation
opt-level = 0             # No optimization for fastest compilation
debug = true              # Full debug info for better debugging
debug-assertions = true   # Enable debug assertions
overflow-checks = true    # Enable integer overflow checks
lto = false              # Disable LTO for faster linking
panic = "unwind"         # Standard panic behavior for better debugging
rpath = false            # Disable rpath for faster linking

# Release profile - maximum optimization
[profile.release]
incremental = false       # Disable incremental for maximum optimization
codegen-units = 1        # Single codegen unit for better optimization
opt-level = 3            # Maximum optimization for speed
debug = false            # No debug info in release
debug-assertions = false # Disable debug assertions
overflow-checks = false  # Disable overflow checks for performance
lto = true              # Enable Link Time Optimization
panic = "abort"         # Abort on panic for smaller binary
strip = true            # Remove debug symbols and metadata
rpath = false           # Disable rpath

# Custom profile for development with some optimization (useful for testing performance)
[profile.dev-opt]
inherits = "dev"
opt-level = 1           # Light optimization
debug-assertions = false
overflow-checks = false

# Dependencies optimization - compile dependencies with optimization even in dev mode
[profile.dev.package."*"]
opt-level = 3           # Optimize all dependencies for better runtime performance
debug = false           # Don't include debug info for dependencies

[lib]
name = "investor_dreams_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-decorum = "1.0.0"
window-vibrancy = "0.5.2"
whoami = "1.5.1"
ollama-rs = "0.2.0"
once_cell = "1.19.0"
directories = "5.0"
base64 = "0.22.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rust_ti = "1.3.0"
ta = "0.5.0"
